// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON-Components SDK|AV Video 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "auto",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "auto",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "auto",
    }
  }
>
  <h1
    className="css-reset-4rbku5 css-text-901oao"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontSize": "2rem",
      }
    }
  >
    Video
  </h1>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-start",
        "WebkitBoxAlign": "start",
        "alignItems": "flex-start",
        "marginTop": "8px",
        "msFlexAlign": "start",
      }
    }
  >
    <a
      className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
      data-focusable={true}
      dir="auto"
      href="https://npmjs.com/package/expo-av"
      rel=" noopener noreferrer"
      role="link"
      style={
        Object {
          "backgroundColor": "rgba(221,221,221,1.00)",
          "borderBottomLeftRadius": "1rem",
          "borderBottomRightRadius": "1rem",
          "borderTopLeftRadius": "1rem",
          "borderTopRightRadius": "1rem",
          "color": "rgba(85,85,85,1.00)",
          "marginRight": "0.5rem",
          "paddingBottom": "0.125rem",
          "paddingLeft": "0.5rem",
          "paddingRight": "0.5rem",
          "paddingTop": "0.125rem",
        }
      }
      target="_blank"
    >
      expo-av
    </a>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexDirection": "column",
        "color": "rgba(102,102,102,1.00)",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.25rem",
        "marginBottom": "1.96875rem",
        "marginTop": "0.65625rem",
        "msFlexDirection": "column",
      }
    }
  >
    Expo universal module for Audio and Video playback
  </div>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n r-pointerEvents-12vffkv"
      style={
        Object {
          "height": "300px",
          "overflowX": "hidden",
          "overflowY": "hidden",
          "width": "300px",
        }
      }
    >
      <video
        autoPlay={true}
        loop={true}
        muted={false}
        onCanPlay={[Function]}
        onEnded={[Function]}
        onError={[Function]}
        onLoadStart={[Function]}
        onLoadedData={[Function]}
        onLoadedMetadata={[Function]}
        onSeeking={[Function]}
        onStalled={[Function]}
        onTimeUpdate={[Function]}
        src="http://d23dyxeqlo5psv.cloudfront.net/big_buck_bunny.mp4"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "objectFit": "cover",
            "overflow": "hidden",
            "position": undefined,
            "right": 0,
            "top": 0,
          }
        }
      />
    </div>
  </div>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/tree/master/apps/storybook/stories/./Video.stories.js"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    Edit this page on GitHub
  </a>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/labels/Video"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    View open issues for 
    Video
  </a>
</div>
`;

exports[`JSON-Components SDK|BlurView.stories.js Blur View 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "auto",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "auto",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "auto",
    }
  }
>
  <h1
    className="css-reset-4rbku5 css-text-901oao"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontSize": "2rem",
      }
    }
  >
    Blur View
  </h1>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-start",
        "WebkitBoxAlign": "start",
        "alignItems": "flex-start",
        "marginTop": "8px",
        "msFlexAlign": "start",
      }
    }
  >
    <a
      className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
      data-focusable={true}
      dir="auto"
      href="https://npmjs.com/package/expo-blur"
      rel=" noopener noreferrer"
      role="link"
      style={
        Object {
          "backgroundColor": "rgba(221,221,221,1.00)",
          "borderBottomLeftRadius": "1rem",
          "borderBottomRightRadius": "1rem",
          "borderTopLeftRadius": "1rem",
          "borderTopRightRadius": "1rem",
          "color": "rgba(85,85,85,1.00)",
          "marginRight": "0.5rem",
          "paddingBottom": "0.125rem",
          "paddingLeft": "0.5rem",
          "paddingRight": "0.5rem",
          "paddingTop": "0.125rem",
        }
      }
      target="_blank"
    >
      expo-blur
    </a>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexDirection": "column",
        "color": "rgba(102,102,102,1.00)",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.25rem",
        "marginBottom": "1.96875rem",
        "marginTop": "0.65625rem",
        "msFlexDirection": "column",
      }
    }
  >
    A component that renders a native blur view on iOS and falls back to a semi-transparent view on Android. A common usage of this is for navigation bars, tab bars, and modals.
  </div>
  <div
    className="css-view-1dbjc4n"
  >
    <h2
      aria-level="2"
      className="css-reset-4rbku5 css-text-901oao"
      dir="auto"
      role="heading"
      style={
        Object {
          "fontSize": "1.3125rem",
          "fontWeight": "bold",
          "marginBottom": "1.3125rem",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "marginBottom": "calc(1.5 * 1.3125rem)",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "fontSize": "1rem",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "backgroundColor": "rgba(221,221,221,1.00)",
                "borderBottomLeftRadius": "1rem",
                "borderBottomRightRadius": "1rem",
                "borderTopLeftRadius": "1rem",
                "borderTopRightRadius": "1rem",
                "color": "rgba(85,85,85,1.00)",
                "marginRight": "0.5rem",
                "paddingBottom": "0.125rem",
                "paddingLeft": "0.5rem",
                "paddingRight": "0.5rem",
                "paddingTop": "0.125rem",
              }
            }
          >
            Safari
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            tint
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            : 
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "fontFamily": "monospace, monospace",
                  "fontSize": "1rem",
                  "lineHeight": "1.3125em",
                }
              }
            >
              'light' | 'default' | 'dark'
            </span>
          </span>
        </span>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "marginTop": "calc(0.5 * 1.3125rem)",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexDirection": "column",
              "alignItems": "stretch",
              "display": "flex",
              "flexDirection": "column",
              "fontSize": "1rem",
              "lineHeight": "1.3125em",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            The filtered effect of the contents behind the BlurView. On Android and Chrome this is just the color of the low-opacity view.
          </span>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "borderBottomColor": "rgba(230,236,240,1.00)",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(230,236,240,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(230,236,240,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(230,236,240,1.00)",
            "borderTopWidth": "1px",
            "marginTop": "1.3125rem",
            "paddingBottom": "1.3125rem",
            "paddingLeft": "1.3125rem",
            "paddingRight": "1.3125rem",
            "paddingTop": "1.3125rem",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(170,184,194,1.00)",
              "fontSize": "0.8rem",
              "fontWeight": "bold",
              "marginBottom": "calc(0.5 * 1.3125rem)",
              "textTransform": "uppercase",
            }
          }
        >
          Example
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxDirection": "normal",
                "WebkitBoxFlex": 1,
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "0%",
                "WebkitFlexDirection": "row",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "msFlexDirection": "row",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "alignItems": "stretch",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "msFlexAlign": "stretch",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <code
                style={
                  Object {
                    "backgroundColor": "rgba(248,248,248,1.00)",
                    "borderBottomColor": "rgba(238,238,238,1.00)",
                    "borderBottomLeftRadius": "3px",
                    "borderBottomRightRadius": "3px",
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": "1px",
                    "borderLeftColor": "rgba(238,238,238,1.00)",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": "1px",
                    "borderRightColor": "rgba(238,238,238,1.00)",
                    "borderRightStyle": "solid",
                    "borderRightWidth": "1px",
                    "borderTopColor": "rgba(238,238,238,1.00)",
                    "borderTopLeftRadius": "3px",
                    "borderTopRightRadius": "3px",
                    "borderTopStyle": "solid",
                    "borderTopWidth": "1px",
                    "color": "rgba(0,0,32,0.90)",
                    "fontFamily": "monospace,monospace",
                    "fontSize": "14px",
                    "lineHeight": "22.4px",
                    "marginLeft": "2px",
                    "marginRight": "2px",
                    "paddingLeft": "5px",
                    "paddingRight": "5px",
                    "textAlign": "center",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                no blur
              </code>
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "height": "200px",
                    "marginBottom": "8px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "8px",
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitFlexBasis": "auto",
                      "backgroundColor": "rgba(128,128,128,1.00)",
                      "bottom": "0px",
                      "flexBasis": "auto",
                      "left": "0px",
                      "msFlexPreferredSize": "auto",
                      "overflowX": "hidden",
                      "overflowY": "hidden",
                      "position": "absolute",
                      "right": "0px",
                      "top": "0px",
                      "zIndex": 0,
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,0.00)",
                        "backgroundImage": "url(\\"test-file-stub\\")",
                        "backgroundPosition": "center",
                        "backgroundRepeat": "no-repeat",
                        "backgroundSize": "cover",
                        "bottom": "0px",
                        "height": "100%",
                        "left": "0px",
                        "position": "absolute",
                        "right": "0px",
                        "top": "0px",
                        "width": "100%",
                        "zIndex": -1,
                      }
                    }
                  />
                  <img
                    alt=""
                    className="css-accessibilityImage-9pa8cd"
                    draggable={false}
                    src="test-file-stub"
                  />
                </div>
              </div>
            </div>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "alignItems": "stretch",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "msFlexAlign": "stretch",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <code
                style={
                  Object {
                    "backgroundColor": "rgba(248,248,248,1.00)",
                    "borderBottomColor": "rgba(238,238,238,1.00)",
                    "borderBottomLeftRadius": "3px",
                    "borderBottomRightRadius": "3px",
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": "1px",
                    "borderLeftColor": "rgba(238,238,238,1.00)",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": "1px",
                    "borderRightColor": "rgba(238,238,238,1.00)",
                    "borderRightStyle": "solid",
                    "borderRightWidth": "1px",
                    "borderTopColor": "rgba(238,238,238,1.00)",
                    "borderTopLeftRadius": "3px",
                    "borderTopRightRadius": "3px",
                    "borderTopStyle": "solid",
                    "borderTopWidth": "1px",
                    "color": "rgba(0,0,32,0.90)",
                    "fontFamily": "monospace,monospace",
                    "fontSize": "14px",
                    "lineHeight": "22.4px",
                    "marginLeft": "2px",
                    "marginRight": "2px",
                    "paddingLeft": "5px",
                    "paddingRight": "5px",
                    "textAlign": "center",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                light
              </code>
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "height": "200px",
                    "marginBottom": "8px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "8px",
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitFlexBasis": "auto",
                      "backgroundColor": "rgba(128,128,128,1.00)",
                      "bottom": "0px",
                      "flexBasis": "auto",
                      "left": "0px",
                      "msFlexPreferredSize": "auto",
                      "overflowX": "hidden",
                      "overflowY": "hidden",
                      "position": "absolute",
                      "right": "0px",
                      "top": "0px",
                      "zIndex": 0,
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,0.00)",
                        "backgroundImage": "url(\\"test-file-stub\\")",
                        "backgroundPosition": "center",
                        "backgroundRepeat": "no-repeat",
                        "backgroundSize": "cover",
                        "bottom": "0px",
                        "height": "100%",
                        "left": "0px",
                        "position": "absolute",
                        "right": "0px",
                        "top": "0px",
                        "width": "100%",
                        "zIndex": -1,
                      }
                    }
                  />
                  <img
                    alt=""
                    className="css-accessibilityImage-9pa8cd"
                    draggable={false}
                    src="test-file-stub"
                  />
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitBoxFlex": 1,
                      "WebkitFlexBasis": "0%",
                      "WebkitFlexGrow": 1,
                      "WebkitFlexShrink": 1,
                      "backgroundColor": "rgba(255,255,255,0.70)",
                      "flexBasis": "0%",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "msFlexNegative": 1,
                      "msFlexPositive": 1,
                      "msFlexPreferredSize": "0%",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "alignItems": "stretch",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "msFlexAlign": "stretch",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <code
                style={
                  Object {
                    "backgroundColor": "rgba(248,248,248,1.00)",
                    "borderBottomColor": "rgba(238,238,238,1.00)",
                    "borderBottomLeftRadius": "3px",
                    "borderBottomRightRadius": "3px",
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": "1px",
                    "borderLeftColor": "rgba(238,238,238,1.00)",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": "1px",
                    "borderRightColor": "rgba(238,238,238,1.00)",
                    "borderRightStyle": "solid",
                    "borderRightWidth": "1px",
                    "borderTopColor": "rgba(238,238,238,1.00)",
                    "borderTopLeftRadius": "3px",
                    "borderTopRightRadius": "3px",
                    "borderTopStyle": "solid",
                    "borderTopWidth": "1px",
                    "color": "rgba(0,0,32,0.90)",
                    "fontFamily": "monospace,monospace",
                    "fontSize": "14px",
                    "lineHeight": "22.4px",
                    "marginLeft": "2px",
                    "marginRight": "2px",
                    "paddingLeft": "5px",
                    "paddingRight": "5px",
                    "textAlign": "center",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                default
              </code>
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "height": "200px",
                    "marginBottom": "8px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "8px",
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitFlexBasis": "auto",
                      "backgroundColor": "rgba(128,128,128,1.00)",
                      "bottom": "0px",
                      "flexBasis": "auto",
                      "left": "0px",
                      "msFlexPreferredSize": "auto",
                      "overflowX": "hidden",
                      "overflowY": "hidden",
                      "position": "absolute",
                      "right": "0px",
                      "top": "0px",
                      "zIndex": 0,
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,0.00)",
                        "backgroundImage": "url(\\"test-file-stub\\")",
                        "backgroundPosition": "center",
                        "backgroundRepeat": "no-repeat",
                        "backgroundSize": "cover",
                        "bottom": "0px",
                        "height": "100%",
                        "left": "0px",
                        "position": "absolute",
                        "right": "0px",
                        "top": "0px",
                        "width": "100%",
                        "zIndex": -1,
                      }
                    }
                  />
                  <img
                    alt=""
                    className="css-accessibilityImage-9pa8cd"
                    draggable={false}
                    src="test-file-stub"
                  />
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitBoxFlex": 1,
                      "WebkitFlexBasis": "0%",
                      "WebkitFlexGrow": 1,
                      "WebkitFlexShrink": 1,
                      "backgroundColor": "rgba(255,255,255,0.40)",
                      "flexBasis": "0%",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "msFlexNegative": 1,
                      "msFlexPositive": 1,
                      "msFlexPreferredSize": "0%",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "alignItems": "stretch",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "msFlexAlign": "stretch",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <code
                style={
                  Object {
                    "backgroundColor": "rgba(248,248,248,1.00)",
                    "borderBottomColor": "rgba(238,238,238,1.00)",
                    "borderBottomLeftRadius": "3px",
                    "borderBottomRightRadius": "3px",
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": "1px",
                    "borderLeftColor": "rgba(238,238,238,1.00)",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": "1px",
                    "borderRightColor": "rgba(238,238,238,1.00)",
                    "borderRightStyle": "solid",
                    "borderRightWidth": "1px",
                    "borderTopColor": "rgba(238,238,238,1.00)",
                    "borderTopLeftRadius": "3px",
                    "borderTopRightRadius": "3px",
                    "borderTopStyle": "solid",
                    "borderTopWidth": "1px",
                    "color": "rgba(0,0,32,0.90)",
                    "fontFamily": "monospace,monospace",
                    "fontSize": "14px",
                    "lineHeight": "22.4px",
                    "marginLeft": "2px",
                    "marginRight": "2px",
                    "paddingLeft": "5px",
                    "paddingRight": "5px",
                    "textAlign": "center",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                dark
              </code>
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "height": "200px",
                    "marginBottom": "8px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "8px",
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              >
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitFlexBasis": "auto",
                      "backgroundColor": "rgba(128,128,128,1.00)",
                      "bottom": "0px",
                      "flexBasis": "auto",
                      "left": "0px",
                      "msFlexPreferredSize": "auto",
                      "overflowX": "hidden",
                      "overflowY": "hidden",
                      "position": "absolute",
                      "right": "0px",
                      "top": "0px",
                      "zIndex": 0,
                    }
                  }
                >
                  <div
                    className="css-view-1dbjc4n"
                    style={
                      Object {
                        "backgroundColor": "rgba(0,0,0,0.00)",
                        "backgroundImage": "url(\\"test-file-stub\\")",
                        "backgroundPosition": "center",
                        "backgroundRepeat": "no-repeat",
                        "backgroundSize": "cover",
                        "bottom": "0px",
                        "height": "100%",
                        "left": "0px",
                        "position": "absolute",
                        "right": "0px",
                        "top": "0px",
                        "width": "100%",
                        "zIndex": -1,
                      }
                    }
                  />
                  <img
                    alt=""
                    className="css-accessibilityImage-9pa8cd"
                    draggable={false}
                    src="test-file-stub"
                  />
                </div>
                <div
                  className="css-view-1dbjc4n"
                  style={
                    Object {
                      "WebkitBoxFlex": 1,
                      "WebkitFlexBasis": "0%",
                      "WebkitFlexGrow": 1,
                      "WebkitFlexShrink": 1,
                      "backgroundColor": "rgba(0,0,0,0.50)",
                      "flexBasis": "0%",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "msFlexNegative": 1,
                      "msFlexPositive": 1,
                      "msFlexPreferredSize": "0%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "marginBottom": "calc(1.5 * 1.3125rem)",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "fontSize": "1rem",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "backgroundColor": "rgba(221,221,221,1.00)",
                "borderBottomLeftRadius": "1rem",
                "borderBottomRightRadius": "1rem",
                "borderTopLeftRadius": "1rem",
                "borderTopRightRadius": "1rem",
                "color": "rgba(85,85,85,1.00)",
                "marginRight": "0.5rem",
                "paddingBottom": "0.125rem",
                "paddingLeft": "0.5rem",
                "paddingRight": "0.5rem",
                "paddingTop": "0.125rem",
              }
            }
          >
            Safari
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            intensity
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            : 
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "fontFamily": "monospace, monospace",
                  "fontSize": "1rem",
                  "lineHeight": "1.3125em",
                }
              }
            >
              number
            </span>
          </span>
        </span>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "marginTop": "calc(0.5 * 1.3125rem)",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexDirection": "column",
              "alignItems": "stretch",
              "display": "flex",
              "flexDirection": "column",
              "fontSize": "1rem",
              "lineHeight": "1.3125em",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            A number from 1 to 100 to control the intensity of the blur effect.
          </span>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "borderBottomColor": "rgba(230,236,240,1.00)",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(230,236,240,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(230,236,240,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(230,236,240,1.00)",
            "borderTopWidth": "1px",
            "marginTop": "1.3125rem",
            "paddingBottom": "1.3125rem",
            "paddingLeft": "1.3125rem",
            "paddingRight": "1.3125rem",
            "paddingTop": "1.3125rem",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(170,184,194,1.00)",
              "fontSize": "0.8rem",
              "fontWeight": "bold",
              "marginBottom": "calc(0.5 * 1.3125rem)",
              "textTransform": "uppercase",
            }
          }
        >
          Example
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxDirection": "normal",
                "WebkitBoxFlex": 1,
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "0%",
                "WebkitFlexDirection": "row",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "msFlexDirection": "row",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitFlexBasis": "auto",
                  "backgroundColor": "rgba(128,128,128,1.00)",
                  "bottom": "28px",
                  "flexBasis": "auto",
                  "left": "0px",
                  "msFlexPreferredSize": "auto",
                  "overflowX": "hidden",
                  "overflowY": "hidden",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "zIndex": 0,
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "backgroundColor": "rgba(0,0,0,0.00)",
                    "backgroundImage": "url(\\"test-file-stub\\")",
                    "backgroundPosition": "center",
                    "backgroundRepeat": "no-repeat",
                    "backgroundSize": "cover",
                    "bottom": "0px",
                    "height": "100%",
                    "left": "0px",
                    "position": "absolute",
                    "right": "0px",
                    "top": "0px",
                    "width": "100%",
                    "zIndex": -1,
                  }
                }
              />
              <img
                alt=""
                className="css-accessibilityImage-9pa8cd"
                draggable={false}
                src="test-file-stub"
              />
            </div>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "alignItems": "stretch",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "msFlexAlign": "stretch",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "backgroundColor": "rgba(255,255,255,0.00)",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "height": "200px",
                    "marginBottom": "8px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "8px",
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              />
              <code
                style={
                  Object {
                    "backgroundColor": "rgba(248,248,248,1.00)",
                    "borderBottomColor": "rgba(238,238,238,1.00)",
                    "borderBottomLeftRadius": "3px",
                    "borderBottomRightRadius": "3px",
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": "1px",
                    "borderLeftColor": "rgba(238,238,238,1.00)",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": "1px",
                    "borderRightColor": "rgba(238,238,238,1.00)",
                    "borderRightStyle": "solid",
                    "borderRightWidth": "1px",
                    "borderTopColor": "rgba(238,238,238,1.00)",
                    "borderTopLeftRadius": "3px",
                    "borderTopRightRadius": "3px",
                    "borderTopStyle": "solid",
                    "borderTopWidth": "1px",
                    "color": "rgba(0,0,32,0.90)",
                    "fontFamily": "monospace,monospace",
                    "fontSize": "14px",
                    "lineHeight": "22.4px",
                    "marginLeft": "2px",
                    "marginRight": "2px",
                    "paddingLeft": "5px",
                    "paddingRight": "5px",
                    "textAlign": "center",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                0
              </code>
            </div>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "alignItems": "stretch",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "msFlexAlign": "stretch",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "backgroundColor": "rgba(255,255,255,0.13)",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "height": "200px",
                    "marginBottom": "8px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "8px",
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              />
              <code
                style={
                  Object {
                    "backgroundColor": "rgba(248,248,248,1.00)",
                    "borderBottomColor": "rgba(238,238,238,1.00)",
                    "borderBottomLeftRadius": "3px",
                    "borderBottomRightRadius": "3px",
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": "1px",
                    "borderLeftColor": "rgba(238,238,238,1.00)",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": "1px",
                    "borderRightColor": "rgba(238,238,238,1.00)",
                    "borderRightStyle": "solid",
                    "borderRightWidth": "1px",
                    "borderTopColor": "rgba(238,238,238,1.00)",
                    "borderTopLeftRadius": "3px",
                    "borderTopRightRadius": "3px",
                    "borderTopStyle": "solid",
                    "borderTopWidth": "1px",
                    "color": "rgba(0,0,32,0.90)",
                    "fontFamily": "monospace,monospace",
                    "fontSize": "14px",
                    "lineHeight": "22.4px",
                    "marginLeft": "2px",
                    "marginRight": "2px",
                    "paddingLeft": "5px",
                    "paddingRight": "5px",
                    "textAlign": "center",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                33
              </code>
            </div>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "alignItems": "stretch",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "msFlexAlign": "stretch",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "backgroundColor": "rgba(255,255,255,0.26)",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "height": "200px",
                    "marginBottom": "8px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "8px",
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              />
              <code
                style={
                  Object {
                    "backgroundColor": "rgba(248,248,248,1.00)",
                    "borderBottomColor": "rgba(238,238,238,1.00)",
                    "borderBottomLeftRadius": "3px",
                    "borderBottomRightRadius": "3px",
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": "1px",
                    "borderLeftColor": "rgba(238,238,238,1.00)",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": "1px",
                    "borderRightColor": "rgba(238,238,238,1.00)",
                    "borderRightStyle": "solid",
                    "borderRightWidth": "1px",
                    "borderTopColor": "rgba(238,238,238,1.00)",
                    "borderTopLeftRadius": "3px",
                    "borderTopRightRadius": "3px",
                    "borderTopStyle": "solid",
                    "borderTopWidth": "1px",
                    "color": "rgba(0,0,32,0.90)",
                    "fontFamily": "monospace,monospace",
                    "fontSize": "14px",
                    "lineHeight": "22.4px",
                    "marginLeft": "2px",
                    "marginRight": "2px",
                    "paddingLeft": "5px",
                    "paddingRight": "5px",
                    "textAlign": "center",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                66
              </code>
            </div>
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "WebkitAlignItems": "stretch",
                  "WebkitBoxAlign": "stretch",
                  "WebkitBoxFlex": 1,
                  "WebkitFlexBasis": "0%",
                  "WebkitFlexGrow": 1,
                  "WebkitFlexShrink": 1,
                  "alignItems": "stretch",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "msFlexAlign": "stretch",
                  "msFlexNegative": 1,
                  "msFlexPositive": 1,
                  "msFlexPreferredSize": "0%",
                }
              }
            >
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "WebkitBoxFlex": 1,
                    "WebkitFlexBasis": "0%",
                    "WebkitFlexGrow": 1,
                    "WebkitFlexShrink": 1,
                    "backgroundColor": "rgba(255,255,255,0.40)",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "height": "200px",
                    "marginBottom": "8px",
                    "marginLeft": "8px",
                    "marginRight": "8px",
                    "marginTop": "8px",
                    "msFlexNegative": 1,
                    "msFlexPositive": 1,
                    "msFlexPreferredSize": "0%",
                  }
                }
              />
              <code
                style={
                  Object {
                    "backgroundColor": "rgba(248,248,248,1.00)",
                    "borderBottomColor": "rgba(238,238,238,1.00)",
                    "borderBottomLeftRadius": "3px",
                    "borderBottomRightRadius": "3px",
                    "borderBottomStyle": "solid",
                    "borderBottomWidth": "1px",
                    "borderLeftColor": "rgba(238,238,238,1.00)",
                    "borderLeftStyle": "solid",
                    "borderLeftWidth": "1px",
                    "borderRightColor": "rgba(238,238,238,1.00)",
                    "borderRightStyle": "solid",
                    "borderRightWidth": "1px",
                    "borderTopColor": "rgba(238,238,238,1.00)",
                    "borderTopLeftRadius": "3px",
                    "borderTopRightRadius": "3px",
                    "borderTopStyle": "solid",
                    "borderTopWidth": "1px",
                    "color": "rgba(0,0,32,0.90)",
                    "fontFamily": "monospace,monospace",
                    "fontSize": "14px",
                    "lineHeight": "22.4px",
                    "marginLeft": "2px",
                    "marginRight": "2px",
                    "paddingLeft": "5px",
                    "paddingRight": "5px",
                    "textAlign": "center",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                100
              </code>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/tree/master/apps/storybook/stories/./BlurView.stories.js"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    Edit this page on GitHub
  </a>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/labels/BlurView"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    View open issues for 
    BlurView
  </a>
</div>
`;

exports[`JSON-Components SDK|Camera.stories.js Camera 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "auto",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "auto",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "auto",
    }
  }
>
  <h1
    className="css-reset-4rbku5 css-text-901oao"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontSize": "2rem",
      }
    }
  >
    Camera
  </h1>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-start",
        "WebkitBoxAlign": "start",
        "alignItems": "flex-start",
        "marginTop": "8px",
        "msFlexAlign": "start",
      }
    }
  >
    <a
      className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
      data-focusable={true}
      dir="auto"
      href="https://npmjs.com/package/expo-camera"
      rel=" noopener noreferrer"
      role="link"
      style={
        Object {
          "backgroundColor": "rgba(221,221,221,1.00)",
          "borderBottomLeftRadius": "1rem",
          "borderBottomRightRadius": "1rem",
          "borderTopLeftRadius": "1rem",
          "borderTopRightRadius": "1rem",
          "color": "rgba(85,85,85,1.00)",
          "marginRight": "0.5rem",
          "paddingBottom": "0.125rem",
          "paddingLeft": "0.5rem",
          "paddingRight": "0.5rem",
          "paddingTop": "0.125rem",
        }
      }
      target="_blank"
    >
      expo-camera
    </a>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexDirection": "column",
        "color": "rgba(102,102,102,1.00)",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.25rem",
        "marginBottom": "1.96875rem",
        "marginTop": "0.65625rem",
        "msFlexDirection": "column",
      }
    }
  >
    A React component that renders a preview for the device's either front or back camera. Camera's parameters like zoom, auto focus, white balance and flash mode are adjustable. With expo-camera, one can also take photos and record videos that are saved to the app's cache. Morever, the component is also capable of detecting faces and bar codes appearing on the preview.
  </div>
  <div
    className="css-view-1dbjc4n"
  />
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/tree/master/apps/storybook/stories/./Camera.stories.js"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    Edit this page on GitHub
  </a>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/labels/Camera"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    View open issues for 
    Camera
  </a>
</div>
`;

exports[`JSON-Components SDK|ErrorRecovery.stories.js Error Recovery 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "auto",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "auto",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "auto",
    }
  }
>
  <h1
    className="css-reset-4rbku5 css-text-901oao"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontSize": "2rem",
      }
    }
  >
    Error Recovery
  </h1>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-start",
        "WebkitBoxAlign": "start",
        "alignItems": "flex-start",
        "marginTop": "8px",
        "msFlexAlign": "start",
      }
    }
  >
    <a
      className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
      data-focusable={true}
      dir="auto"
      href="https://npmjs.com/package/expo"
      rel=" noopener noreferrer"
      role="link"
      style={
        Object {
          "backgroundColor": "rgba(221,221,221,1.00)",
          "borderBottomLeftRadius": "1rem",
          "borderBottomRightRadius": "1rem",
          "borderTopLeftRadius": "1rem",
          "borderTopRightRadius": "1rem",
          "color": "rgba(85,85,85,1.00)",
          "marginRight": "0.5rem",
          "paddingBottom": "0.125rem",
          "paddingLeft": "0.5rem",
          "paddingRight": "0.5rem",
          "paddingTop": "0.125rem",
        }
      }
      target="_blank"
    >
      expo
    </a>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexDirection": "column",
        "color": "rgba(102,102,102,1.00)",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.25rem",
        "marginBottom": "1.96875rem",
        "marginTop": "0.65625rem",
        "msFlexDirection": "column",
      }
    }
  >
    Utilities for helping you gracefully handle crashes due to fatal JavaScript errors.
  </div>
  <div
    className="css-view-1dbjc4n"
  >
    <h2
      aria-level="2"
      className="css-reset-4rbku5 css-text-901oao"
      dir="auto"
      role="heading"
      style={
        Object {
          "fontSize": "1.3125rem",
          "fontWeight": "bold",
          "marginBottom": "1.3125rem",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "marginBottom": "calc(1.5 * 1.3125rem)",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "fontSize": "1rem",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            setRecoveryProps
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            : 
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "fontFamily": "monospace, monospace",
                  "fontSize": "1rem",
                  "lineHeight": "1.3125em",
                }
              }
            >
              props: Object
            </span>
          </span>
        </span>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "marginTop": "calc(0.5 * 1.3125rem)",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexDirection": "column",
              "alignItems": "stretch",
              "display": "flex",
              "flexDirection": "column",
              "fontSize": "1rem",
              "lineHeight": "1.3125em",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            Set arbitrary error recovery props. If your project crashes in production as a result of a fatal JS error, Expo will reload your project. If you've set these props, they'll be passed to your reloaded project's initial props under exp.errorRecovery.
          </span>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "borderBottomColor": "rgba(230,236,240,1.00)",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(230,236,240,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(230,236,240,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(230,236,240,1.00)",
            "borderTopWidth": "1px",
            "marginTop": "1.3125rem",
            "paddingBottom": "1.3125rem",
            "paddingLeft": "1.3125rem",
            "paddingRight": "1.3125rem",
            "paddingTop": "1.3125rem",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(170,184,194,1.00)",
              "fontSize": "0.8rem",
              "fontWeight": "bold",
              "marginBottom": "calc(0.5 * 1.3125rem)",
              "textTransform": "uppercase",
            }
          }
        >
          Example
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxDirection": "normal",
                "WebkitBoxFlex": 1,
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexBasis": "0%",
                "WebkitFlexDirection": "row",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "flexBasis": "0%",
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "msFlexDirection": "row",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          >
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "WebkitBoxDirection": "normal",
                  "WebkitBoxOrient": "vertical",
                  "WebkitFlexDirection": "column",
                  "color": "rgba(102,102,102,1.00)",
                  "display": "flex",
                  "flexDirection": "column",
                  "fontSize": "1.25rem",
                  "marginBottom": "1.96875rem",
                  "marginTop": "0.65625rem",
                  "msFlexDirection": "column",
                }
              }
            >
              Inner app content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/tree/master/apps/storybook/stories/./ErrorRecovery.stories.js"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    Edit this page on GitHub
  </a>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/labels/ErrorRecovery"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    View open issues for 
    ErrorRecovery
  </a>
</div>
`;

exports[`JSON-Components SDK|LinearGradient.stories.js Linear Gradient 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "auto",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "auto",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "auto",
    }
  }
>
  <h1
    className="css-reset-4rbku5 css-text-901oao"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontSize": "2rem",
      }
    }
  >
    Linear Gradient
  </h1>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-start",
        "WebkitBoxAlign": "start",
        "alignItems": "flex-start",
        "marginTop": "8px",
        "msFlexAlign": "start",
      }
    }
  >
    <a
      className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
      data-focusable={true}
      dir="auto"
      href="https://npmjs.com/package/expo-linear-gradient"
      rel=" noopener noreferrer"
      role="link"
      style={
        Object {
          "backgroundColor": "rgba(221,221,221,1.00)",
          "borderBottomLeftRadius": "1rem",
          "borderBottomRightRadius": "1rem",
          "borderTopLeftRadius": "1rem",
          "borderTopRightRadius": "1rem",
          "color": "rgba(85,85,85,1.00)",
          "marginRight": "0.5rem",
          "paddingBottom": "0.125rem",
          "paddingLeft": "0.5rem",
          "paddingRight": "0.5rem",
          "paddingTop": "0.125rem",
        }
      }
      target="_blank"
    >
      expo-linear-gradient
    </a>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexDirection": "column",
        "color": "rgba(102,102,102,1.00)",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.25rem",
        "marginBottom": "1.96875rem",
        "marginTop": "0.65625rem",
        "msFlexDirection": "column",
      }
    }
  >
    Provides a React component that renders a gradient view.
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "marginBottom": "calc(1.5 * 1.3125rem)",
      }
    }
  >
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "fontSize": "1rem",
        }
      }
    >
      <span
        className="css-text-901oao css-textHasAncestor-16my406"
        dir="auto"
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          Playground
        </span>
      </span>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(230,236,240,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(230,236,240,1.00)",
          "borderLeftWidth": "1px",
          "borderRightColor": "rgba(230,236,240,1.00)",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(230,236,240,1.00)",
          "borderTopWidth": "1px",
          "marginTop": "1.3125rem",
          "paddingBottom": "1.3125rem",
          "paddingLeft": "1.3125rem",
          "paddingRight": "1.3125rem",
          "paddingTop": "1.3125rem",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(170,184,194,1.00)",
            "fontSize": "0.8rem",
            "fontWeight": "bold",
            "marginBottom": "calc(0.5 * 1.3125rem)",
            "textTransform": "uppercase",
          }
        }
      >
        Example
      </div>
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitBoxFlex": 1,
              "WebkitFlexBasis": "0%",
              "WebkitFlexGrow": 1,
              "WebkitFlexShrink": 1,
              "backgroundImage": "linear-gradient(180deg, #ff0000ff,#0000ffff 100%)",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "maxHeight": "200px",
              "minHeight": "200px",
              "msFlexNegative": 1,
              "msFlexPositive": 1,
              "msFlexPreferredSize": "0%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
  >
    <h2
      aria-level="2"
      className="css-reset-4rbku5 css-text-901oao"
      dir="auto"
      role="heading"
      style={
        Object {
          "fontSize": "1.3125rem",
          "fontWeight": "bold",
          "marginBottom": "1.3125rem",
        }
      }
    >
      Props
    </h2>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "marginBottom": "calc(1.5 * 1.3125rem)",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "fontSize": "1rem",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            ...View props
          </span>
        </span>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "marginBottom": "calc(1.5 * 1.3125rem)",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "fontSize": "1rem",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            colors
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            : 
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "fontFamily": "monospace, monospace",
                  "fontSize": "1rem",
                  "lineHeight": "1.3125em",
                }
              }
            >
              string[]
            </span>
          </span>
        </span>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "marginTop": "calc(0.5 * 1.3125rem)",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexDirection": "column",
              "alignItems": "stretch",
              "display": "flex",
              "flexDirection": "column",
              "fontSize": "1rem",
              "lineHeight": "1.3125em",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            An array of colors that represent stops in the gradient. At least two colors are required (otherwise it's not a gradient, it's just a fill!).
          </span>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "borderBottomColor": "rgba(230,236,240,1.00)",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(230,236,240,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(230,236,240,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(230,236,240,1.00)",
            "borderTopWidth": "1px",
            "marginTop": "1.3125rem",
            "paddingBottom": "1.3125rem",
            "paddingLeft": "1.3125rem",
            "paddingRight": "1.3125rem",
            "paddingTop": "1.3125rem",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(170,184,194,1.00)",
              "fontSize": "0.8rem",
              "fontWeight": "bold",
              "marginBottom": "calc(0.5 * 1.3125rem)",
              "textTransform": "uppercase",
            }
          }
        >
          Example
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxFlex": 1,
                "WebkitFlexBasis": "0%",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "backgroundImage": "linear-gradient(180deg, #ff0000ff,#800080ff,#0000ffff)",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "maxHeight": "200px",
                "minHeight": "200px",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "marginBottom": "calc(1.5 * 1.3125rem)",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "fontSize": "1rem",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            start
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            : 
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "fontFamily": "monospace, monospace",
                  "fontSize": "1rem",
                  "lineHeight": "1.3125em",
                }
              }
            >
              number[]
            </span>
          </span>
        </span>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "marginTop": "calc(0.5 * 1.3125rem)",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexDirection": "column",
              "alignItems": "stretch",
              "display": "flex",
              "flexDirection": "column",
              "fontSize": "1rem",
              "lineHeight": "1.3125em",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            An array of [x, y] where x and y are floats. They represent the position that the gradient starts at, as a fraction of the overall size of the gradient. For example, [0.1, 0.2] means that the gradient will start 10% from the left and 20% from the top.
          </span>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "borderBottomColor": "rgba(230,236,240,1.00)",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(230,236,240,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(230,236,240,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(230,236,240,1.00)",
            "borderTopWidth": "1px",
            "marginTop": "1.3125rem",
            "paddingBottom": "1.3125rem",
            "paddingLeft": "1.3125rem",
            "paddingRight": "1.3125rem",
            "paddingTop": "1.3125rem",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(170,184,194,1.00)",
              "fontSize": "0.8rem",
              "fontWeight": "bold",
              "marginBottom": "calc(0.5 * 1.3125rem)",
              "textTransform": "uppercase",
            }
          }
        >
          Example
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxFlex": 1,
                "WebkitFlexBasis": "0%",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "backgroundImage": "linear-gradient(187.1250163489018deg, #008000ff,#ffa500ff)",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "maxHeight": "200px",
                "minHeight": "200px",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "marginBottom": "calc(1.5 * 1.3125rem)",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "fontSize": "1rem",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            end
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            : 
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "fontFamily": "monospace, monospace",
                  "fontSize": "1rem",
                  "lineHeight": "1.3125em",
                }
              }
            >
              number[]
            </span>
          </span>
        </span>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "marginTop": "calc(0.5 * 1.3125rem)",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexDirection": "column",
              "alignItems": "stretch",
              "display": "flex",
              "flexDirection": "column",
              "fontSize": "1rem",
              "lineHeight": "1.3125em",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            Same as start but for the end of the gradient.
          </span>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "borderBottomColor": "rgba(230,236,240,1.00)",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(230,236,240,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(230,236,240,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(230,236,240,1.00)",
            "borderTopWidth": "1px",
            "marginTop": "1.3125rem",
            "paddingBottom": "1.3125rem",
            "paddingLeft": "1.3125rem",
            "paddingRight": "1.3125rem",
            "paddingTop": "1.3125rem",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(170,184,194,1.00)",
              "fontSize": "0.8rem",
              "fontWeight": "bold",
              "marginBottom": "calc(0.5 * 1.3125rem)",
              "textTransform": "uppercase",
            }
          }
        >
          Example
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxFlex": 1,
                "WebkitFlexBasis": "0%",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "backgroundImage": "linear-gradient(153.43494882292202deg, #008000ff,#ffa500ff)",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "maxHeight": "200px",
                "minHeight": "200px",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "marginBottom": "calc(1.5 * 1.3125rem)",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "fontSize": "1rem",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            locations
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            : 
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "fontFamily": "monospace, monospace",
                  "fontSize": "1rem",
                  "lineHeight": "1.3125em",
                }
              }
            >
              number[]
            </span>
          </span>
        </span>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "marginTop": "calc(0.5 * 1.3125rem)",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "WebkitAlignItems": "stretch",
              "WebkitBoxAlign": "stretch",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitFlexDirection": "column",
              "alignItems": "stretch",
              "display": "flex",
              "flexDirection": "column",
              "fontSize": "1rem",
              "lineHeight": "1.3125em",
              "msFlexAlign": "stretch",
              "msFlexDirection": "column",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
          >
            An array of the same length as colors, where each element is a float with the same meaning as the start and  end values, but instead they indicate where the color at that index should be.
          </span>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "borderBottomColor": "rgba(230,236,240,1.00)",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(230,236,240,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(230,236,240,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(230,236,240,1.00)",
            "borderTopWidth": "1px",
            "marginTop": "1.3125rem",
            "paddingBottom": "1.3125rem",
            "paddingLeft": "1.3125rem",
            "paddingRight": "1.3125rem",
            "paddingTop": "1.3125rem",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(170,184,194,1.00)",
              "fontSize": "0.8rem",
              "fontWeight": "bold",
              "marginBottom": "calc(0.5 * 1.3125rem)",
              "textTransform": "uppercase",
            }
          }
        >
          Example
        </div>
        <div
          className="css-view-1dbjc4n"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxFlex": 1,
                "WebkitFlexBasis": "0%",
                "WebkitFlexGrow": 1,
                "WebkitFlexShrink": 1,
                "backgroundImage": "linear-gradient(180deg, #ff0000ff 50%,#0000ffff 60%)",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "maxHeight": "200px",
                "minHeight": "200px",
                "msFlexNegative": 1,
                "msFlexPositive": 1,
                "msFlexPreferredSize": "0%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/tree/master/apps/storybook/stories/./LinearGradient.stories.js"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    Edit this page on GitHub
  </a>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/labels/LinearGradient"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    View open issues for 
    LinearGradient
  </a>
</div>
`;

exports[`JSON-Components SDK|SVG.stories.js SVG 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "auto",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "auto",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "auto",
    }
  }
>
  <h1
    className="css-reset-4rbku5 css-text-901oao"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontSize": "2rem",
      }
    }
  >
    SVG
  </h1>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "flex-start",
        "WebkitBoxAlign": "start",
        "alignItems": "flex-start",
        "marginTop": "8px",
        "msFlexAlign": "start",
      }
    }
  >
    <a
      className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
      data-focusable={true}
      dir="auto"
      href="https://npmjs.com/package/react-native-svg"
      rel=" noopener noreferrer"
      role="link"
      style={
        Object {
          "backgroundColor": "rgba(221,221,221,1.00)",
          "borderBottomLeftRadius": "1rem",
          "borderBottomRightRadius": "1rem",
          "borderTopLeftRadius": "1rem",
          "borderTopRightRadius": "1rem",
          "color": "rgba(85,85,85,1.00)",
          "marginRight": "0.5rem",
          "paddingBottom": "0.125rem",
          "paddingLeft": "0.5rem",
          "paddingRight": "0.5rem",
          "paddingTop": "0.125rem",
        }
      }
      target="_blank"
    >
      react-native-svg
    </a>
  </div>
  <div
    className="css-text-901oao"
    dir="auto"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxOrient": "vertical",
        "WebkitFlexDirection": "column",
        "color": "rgba(102,102,102,1.00)",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.25rem",
        "marginBottom": "1.96875rem",
        "marginTop": "0.65625rem",
        "msFlexDirection": "column",
      }
    }
  >
    SVG library for react-native
  </div>
  <div
    className="css-view-1dbjc4n"
  >
    <h2
      aria-level="2"
      className="css-reset-4rbku5 css-text-901oao"
      dir="auto"
      role="heading"
      style={
        Object {
          "fontSize": "1.3125rem",
          "fontWeight": "bold",
          "marginBottom": "1.3125rem",
        }
      }
    />
    <svg
      height={100}
      width={100}
    >
      <circle
        cx={50}
        cy={50}
        fill="#f1c40f"
        r={45}
        stroke="#e74c3c"
        strokeWidth={2.5}
      />
      <rect
        fill="blue"
        height={70}
        stroke="red"
        strokeWidth={2}
        width={70}
        x={15}
        y={15}
      />
    </svg>
  </div>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/tree/master/apps/storybook/stories/./SVG.stories.js"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    Edit this page on GitHub
  </a>
  <a
    className="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao"
    data-focusable={true}
    dir="auto"
    href="https://github.com/expo/expo/labels/SVG"
    rel=" noopener noreferrer"
    role="link"
    style={
      Object {
        "color": "rgba(27,149,224,1.00)",
        "fontSize": "1rem",
        "marginTop": "0.65625rem",
        "textDecoration": "underline",
      }
    }
    target="_blank"
  >
    View open issues for 
    SVG
  </a>
</div>
`;
